--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -28,10 +28,10 @@ function set_openid(openid, pr)
         {% endfor %}
     </p>
     <p>
-        USERNAME:<br>
-        {{ form.username(size=80) }}<br>
-        PASSWORD:<br>
-        {{ form.password(size=80) }}<br>
+        Username:
+        {{ form.username }}
+        Password:
+        {{ form.password }}
     </p>
     <p>{{ form.remember_me }} Remember Me</p>
     <p><input type="submit" value="Sign In"></p>
