--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,7 +4,7 @@
 <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(128) }}"></td>
-        <td><h1>User:{{ user.nickname }}</h1></td>
+        <td><h1>User:{{ user.username }}</h1></td>
     </tr>
 </table>
 <hr>
