--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 <body>
     <div>
         Microblog: <a href="/index">Home</a>
+{#        <a href=""></a>#}
         {% if g.user.is_authenticated %}
             | <a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a>
             | <a href="{{ url_for('logout') }}">Logout</a>
